--- a/class_2/css/main.css
+++ b/class_2/css/main.css
@@ -9,12 +9,46 @@
  	background: #fff; 
  }
 
+}
+a {
+    display: block;
+    width: 60px;
+}
+
  header {
- 	border-top: 2px solid #000;
- 	padding: 70px;
+ 	border-top: 7px solid #000;
+ 	padding: 50px;
  	text-align: center;
- 	font-family: arial; sans-serif;
+ 	font-family: helvetica; sans-serif;
  }
+hr1 { 
+    display: block;
+    margin-top: 3em;
+    margin-bottom: 0em;
+    margin-left: auto;
+    margin-right: auto;
+    border-style: inset;
+    border-width: 2px;
+}
+hr {
+    margin-top: 3em;
+    margin-bottom: 0em;
+    margin-left: auto;
+    margin-right: auto;
+  
+}
+hr3 { 
+    display: block;
+    margin-top: 0em;
+    margin-bottom: 1em;
+    margin-left: auto;
+    margin-right: auto;
+    border-style: solid;
+    border-width: 3px;
+}
+section {
+  padding-right: 50px ; padding-left: 50px;
+}
 
  header a {
  	color: #000;
@@ -23,8 +57,25 @@
 
  header h1 {
  	text-transform: uppercase;
- 	margin-top: 10px;
+ 	margin-top: 5px;
  }
+
+h2 {
+   	font-family: helvetica; sans-serif;
+}
+
+h3 {
+   	font-family: helvetica; sans-serif;
+   	letter-spacing: 3px;
+}
+
+p {
+	font-family: georgia;
+	font-size: 18px;
+	letter-spacing: 1px;
+	line-height: 34px;
+
+}
 
  .active-link {
  	color: #000;
@@ -34,15 +85,37 @@
  }
 
  .exp-section {
+ 	height: 150px;
+ }
 
+ .rel-section {
+ 	height: 530px;
  }
 
  .about-me {
- 	height: 400px;
+ 	height: 320px;
  }
 
  .about-photo {
- 	float: right;
- 	-webkit-clip-path: circle(150px at center);
+ 	  float: right;
+    display: block;
+    margin-top: 0em;
+    margin-bottom: 2em;
+    margin-left: 1em;
+    margin-right: auto;
+    border-style: inset;
+    border-width: 2px;
+    padding: 5px; 
+   resize: both;
+   width: 250px; 
+   height: 250px;
  }
+ul {
+ 	color: black;
+ 	text-align: center;
+ 	font-family: arial; sans-serif;
+  	font-weight: bold;
+  	font-size: 16px;
+  	list-style-type: none;
+}
 
